Try to fix footer overflow on mobile

--- a/app/assets/styles/base/_zindex.scss
+++ b/app/assets/styles/base/_zindex.scss
@@ -1,4 +1,5 @@
-header {
+header,
+footer{
     z-index: 900;
 }
 
